<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".Activity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/jerry"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messagereciever2"
        android:layout_width="380dp"
        android:layout_height="108dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="15dp"
        android:background="#B89FE3"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="264dp"
        android:layout_height="54dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messagereciever2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messagesender2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_a_message2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="61dp"
        android:text="@string/send2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/messagereciever2" />
</androidx.constraintlayout.widget.ConstraintLayout>